 - BR #12662 file picker does not filter archives properly.
 - BR #12666 missing admin-log data.
 - BR #12677 UDT parse error can trigger 500 error.
 - BR #12683 admin-log data length management.
 - Improved pages-hierarchy management.
 - Validate entered bookmark-URLs.
 - Include .phar files in executables test.
 - Deprecated use of PHP function umask().
 - Since CMSMS 2.2, config parameters 'ssl_url','ssl_uploads_url' and 'ssl_image_uploads_url', and methods which use those, have internally but not publicly been flagged as deprecated.
 - Added missing nls files, allowing installation of extra translations.
 - Smarty upgraded to version 4.3.5.
 - Enabled use of PHP function rawurlencode in Smarty templates.
 - Added Smarty modifier plugin 'adjust' to handle deprecated modifier-function-calls in templates.
 - Added variable '_call' to all Smarty template objects to handle Smarty5's removal of PHP function calling.
 - PHPMailer upgraded to version 6.9.1.
 - TinyMCE upgraded to version 5.10.9, with support for theme-selection.
 - jQuery upgraded to version 1.12.4.
 - jQuery UI upgraded to version 1.12.1 (with previous styling).
 - jQuery migrate upgraded to version 1.4.1.

Admin theme
 - Corrected content scrolling

AdminSearch 1.0.7
 - FR #12555 - Support exclusion of inactive pages from searches

CmsJobManager 0.1.4
 - BR #12629 - Add missing changelog and retriever

CMSMailer
 - Removed deprecated status

ContentManager 1.1.11
 - BR #12474 - Taking the default page down by accident through the content type
 - BR #12635 - Apply button is shown for non-existing page and creates new pages
 - FR #12487 - (partial) Page search also checks menu text

DesignManager 1.1.10
 - Corrected new template creation

FileManager 1.6.14
 - BR #12535 - File Manager Unpack archive .tar.gz

FilePicker 1.0.7
 - BR #12621 - FilePicker upload bug
 - BR #12628 - Add missing changelog and retriever
 - Add missing ContentBlockField API methods

MenuManager 1.50.4