@@ -9,4 +9,5 @@ install_excludes = "/find-mime$/||/scripts\/.*$/||/\/svn.*/||/\/tests\/.*/||/\/b
 ;earliest current-security-supported micro-version, via https://www.php.net/supported-versions.php and https://www.php.net/releases/index.php
 livephpmin = "8.1.27"
 ;bundled non-core modules
+extramodules[]="News"
 extramodules[]="UserGuide"
