@@ -24,6 +24,7 @@ Core - General
  - Validate entered bookmark-URLs.
  - Include .phar files in executables test.
  - Deprecated use of PHP function umask().
+ - News module status changed to non-core, but still installed with demo content.
  - Since CMSMS 2.2, config parameters 'ssl_url','ssl_uploads_url' and 'ssl_image_uploads_url', and methods which use those, have internally but not publicly been flagged as deprecated.
  - Added missing nls files, allowing installation of extra translations.
  - Smarty upgraded to version 4.3.5.
